--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>baburao ganpat rao ka webpage he re baba</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>We all felt when he said this</h1>
+<p>Ae baba time bhot kharab chal rha he</p>
 
 </body>
 </html>
